--- a/css/main.less
+++ b/css/main.less
@@ -2363,8 +2363,8 @@ p, cite {
     width: 150%;
   }
   #map-key {
-    bottom: initial;
-    right: initial;
+    bottom: auto;
+    right: auto;
     top: 23rem;
     left: 2rem;
   }
