--- a/css/main.less
+++ b/css/main.less
@@ -149,11 +149,6 @@ ul {
       display:inline-block;
       text-align: left;
     }
-    #binoculars {
-      position:relative;
-      left:20px;
-      top:2px;
-    }
     #chevron {
       position: absolute;
       right: 20px;
@@ -186,14 +181,13 @@ ul {
     width: 76px;
     h2 {
       display:none;
-      position: relative;
+      line-height: 56px;
       text-decoration: none;
-      left: 33px;
-      top: 15px;
     }
     img {
       display: inline-block;
-      margin: 11px 0 11px -2px;
+      margin: 14px 17px;
+      vertical-align: top;
       width: 42px;
     }
   }
@@ -2174,9 +2168,6 @@ p, cite {
     h2 {
       letter-spacing: 3px;
     }
-  }
-  #logo h2 {
-    margin-bottom: 1.5rem;
   }
 }
 #header-wrap {
