Replace staff .png images with .svg; add analytics code

--- a/css/main.less
+++ b/css/main.less
@@ -562,22 +562,27 @@ section#at-a-glance {
   #icon-students-served {
     left: 20vw;
     top: 7vw;
+    width: 12vw;
   }
   #icon-hours {
    left: 19vw;
    top: 6vw;
+   width: 12vw;
   }
   #icon-active-volunteers {
    left: 2vw;
    top: 7.2vw;
+   width: 10vw;
   }
   #icon-field-trips {
    left: 17.7vw;
    top: 3.5vw;
+   width: 10vw;
   }
   #icon-workshops {
    left: 12.3vw;
    top: 3.9vw;
+   width: 15vw;
   }
   .no-2 {
     margin-top: 5.5vw;
@@ -723,6 +728,7 @@ div#after-school {
   #icon-after-school {
     left: 3.8vw;
     top: 2.2vw;
+    width: 8vw;
   }
   //block 1
   .block:nth-of-type(1) {
@@ -753,8 +759,9 @@ div#field-trips {
   }
   margin-top: 12rem;
   #icon-authors {
-    left: 13vw;
+    left: 16vw;
     top: 4.5vw;
+    width: 13vw;
   }
   .no-3 {
     margin-top: 2.4vw;
@@ -801,6 +808,7 @@ div#in-schools {
   #icon-publications {
     left: 2vw;
     top: 3vw;
+    width: 9vw;
   }
   .block:nth-of-type(2) {
     p {
@@ -843,6 +851,7 @@ div#workshops {
   #icon-workshops-2 {
     left: 15vw;
     top: 3vw;
+    width: 10vw;
   }
   .no-3 {
     margin-top: 2.4vw;
@@ -1661,7 +1670,7 @@ footer {
   }
   section#mission-statement {
     img:nth-child(1) {
-      top: 6vw;
+      top: 8vw;
     }
     img:nth-of-type(4) {
       bottom: 7vw;
@@ -1671,7 +1680,7 @@ footer {
     }
   }
   div#field-trips #icon-authors {
-    left: 12vw;
+    left: 16vw;
   }
   div#publications {
     .books__item {
@@ -1800,9 +1809,25 @@ footer {
     }
   }
 }
-@media all and (min-width: 54rem) {section#at-a-glance #icon-students-served {
-  width: 9vw !important;
-  }}
+@media all and (min-width: 54rem) {
+  section#at-a-glance {
+    #icon-students-served {
+      width: 9vw !important;
+    }
+    #icon-hours {
+      width: 11vw;
+    }
+    #icon-active-volunteers {
+      width: 10vw;
+    }
+    #icon-field-trips {
+      width: 10vw;
+    }
+    #icon-workshops {
+      width: 14vw;
+    }
+  }
+}
 @media all and (max-width: 54rem) {
   main {
     margin-left: 18vw;
@@ -2020,6 +2045,9 @@ footer {
     .block:nth-of-type(5) {
       height: 29.5vw;
     }
+  }
+  div#after-school #icon-after-school {
+    width: 9vw;
   }
   div#field-trips {
     #icon-authors {
@@ -2400,7 +2428,7 @@ section#at-a-glance {
     width: 28vw !important;
   }
   #icon-active-volunteers {
-    left: 39vw;
+    left: 46vw;
     top: 7vw;
     width: 25vw !important;
   }
